Fix map top gap

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -611,7 +611,7 @@ ul.results-list {
 #map-canvas {
     width: 100%;
     height: 100%;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .result h1,
